# Service_for_referral_system

./: .gitignore  Readme.md  fake_db.py  manage.py  pyproject.toml
Referral_system/: apps.py  models.py
Referral_system/API/: permissions.py  serializers.py  urls.py  views.py
Referral_system/migrations/: 0001_initial.py  0002_referralcode_is_active_alter_referralcode_user.py  0003_alter_users_email.py
Service_for_referral_system/: asgi.py  settings.py  swagger.py  urls.py  wsgi.py
